--- a/src/components/post-subheader.astro
+++ b/src/components/post-subheader.astro
@@ -1,5 +1,4 @@
 ---
-import { twJoin } from 'tailwind-merge';
 import Icon from './ui/icon.astro';
 import Separator from './ui/separator.astro';
 import Text from './ui/text.astro';
@@ -12,20 +11,20 @@ const hash = slot.toLowerCase().replace(/ /g, '-');
   <a
     id={hash}
     href={`#${hash}`}
-    class={twJoin(
+    class:list={[
       'group hover:text-brand max-w-max rounded',
       'focus-visible:ring-ring focus-visible:ring focus-visible:outline-none motion-safe:transition-colors',
-    )}
+    ]}
   >
     <Text as="h2" class="flex items-center gap-2 text-lg uppercase">
       {slot}
       <Icon
         name="link"
-        class={twJoin(
+        class:list={[
           'scale-50 opacity-0 motion-safe:transition-all',
           'group-hover:scale-100 group-hover:opacity-100',
           'group-hover:starting:scale-50 group-hover:starting:opacity-0',
-        )}
+        ]}
       />
     </Text>
   </a>
