--- a/src/pages/blog/results.astro
+++ b/src/pages/blog/results.astro
@@ -12,7 +12,6 @@ import Text from '@/components/ui/text.astro';
 import { z } from 'astro/zod';
 import { getCollection, render } from 'astro:content';
 import { db, sql } from 'astro:db';
-import { twJoin } from 'tailwind-merge';
 
 let posts = await Promise.all(
   (await getCollection('posts'))
@@ -43,11 +42,11 @@ if (Astro.request.method === 'POST') {
           <a
             href={`/blog/${post.id}`}
             aria-label={post.data.title}
-            class={twJoin([
+            class:list={[
               'group flex flex-col rounded py-2 text-xs',
               'sm:flex-row sm:items-center sm:justify-between sm:gap-2',
               'focus-visible:ring-ring focus-visible:ring-1 focus-visible:outline-none',
-            ])}
+            ]}
           >
             <Text class="group-hover:text-brand motion-safe:transition-colors">{post.data.title}</Text>
             <Separator class="flex-1" />
