--- a/src/components/ui/clipboard.astro
+++ b/src/components/ui/clipboard.astro
@@ -1,6 +1,6 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { twJoin, twMerge } from 'tailwind-merge';
+import { twMerge } from 'tailwind-merge';
 import Icon from './icon.astro';
 
 type Props = HTMLAttributes<'button'> & { content?: string; target?: string };
@@ -32,16 +32,16 @@ const { class: className, 'aria-label': ariaLabel, content, target, ...props } =
   <slot />
   <Icon
     name="clipboard"
-    class={twJoin(
+    class:list={[
       'size-3.5 group-data-checked:hidden motion-safe:transition-all',
       'duration-300 group-data-checked:scale-100 group-data-checked:opacity-100',
-    )}
+    ]}
   />
   <Icon
     name="check"
-    class={twJoin(
+    class:list={[
       'size-3.5 group-not-data-checked:hidden motion-safe:transition-all starting:scale-0 starting:opacity-0',
       'duration-300 group-not-data-checked:scale-100 group-not-data-checked:opacity-100',
-    )}
+    ]}
   />
 </button>
