--- a/src/components/ui/textfield.astro
+++ b/src/components/ui/textfield.astro
@@ -4,7 +4,7 @@ import { twMerge } from 'tailwind-merge';
 
 type Props = HTMLAttributes<'input'>;
 
-const { class: className, type, spellcheck, autocomplete, ...props } = Astro.props;
+const { class: className, type, spellcheck, autocomplete, autocorrect, autocapitalize, ...props } = Astro.props;
 ---
 
 <div class={twMerge('bg-surface-1 border-border relative flex items-center justify-between rounded border', className)}>
@@ -14,13 +14,15 @@ const { class: className, type, spellcheck, autocomplete, ...props } = Astro.pro
     type={type ?? 'text'}
     spellcheck={spellcheck ?? false}
     autocomplete={autocomplete ?? 'off'}
+    autocorrect={autocorrect ?? 'off'}
+    autocapitalize={autocapitalize ?? 'off'}
     class:list={[
-      'relative z-20 w-full flex-1 shrink-0 rounded bg-transparent px-3 py-1',
+      'relative z-20 w-full flex-1 shrink-0 rounded bg-transparent px-3 py-2',
       'placeholder:text-foreground-2/50 focus-visible:ring-ring focus-visible:ring-1 focus-visible:outline-none',
       'disabled:pointer-events-none disabled:opacity-50',
       Astro.slots.has('prefix') && 'pl-7',
       Astro.slots.has('suffix') && 'pr-10',
     ]}
   />
-  <div class="text-foreground-2/50 absolute top-1/2 right-2 z-10 shrink-0 -translate-y-1/2"><slot name="suffix" /></div>
+  <div class="text-foreground-2/50 absolute top-1/2 right-2 z-30 shrink-0 -translate-y-1/2"><slot name="suffix" /></div>
 </div>
