--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,65 +1,5 @@
 ---
-import PostCard from '@/components/post-card.astro';
-import Button from '@/components/ui/button.astro';
-import Chip from '@/components/ui/chip.astro';
-import Command from '@/components/ui/command.astro';
-import Icon from '@/components/ui/icon.astro';
-import Separator from '@/components/ui/separator.astro';
-import Text from '@/components/ui/text.astro';
-import Textfield from '@/components/ui/textfield.astro';
-import Layout from '@/layouts/layout.astro';
-import { getCollection } from 'astro:content';
-import { PostView, db, sum } from 'astro:db';
-import PostResults from './results.astro';
-
-const [rs] = await db.select({ views: sum(PostView.views) }).from(PostView);
-const views = Intl.NumberFormat('en', { notation: 'compact', maximumFractionDigits: 1 }).format(Number(rs?.views ?? 0));
-
-const posts = (await getCollection('posts')).sort((a, b) => b.data.published.valueOf() - a.data.published.valueOf());
-const topics = [...new Set(posts.flatMap((post) => post.data.topics))].sort();
+import Template from './_template.astro';
 ---
 
-<Layout title="Blog | Christian Penrod" class="mx-auto lg:max-w-screen-xl lg:px-20">
-  <section>
-    <Text as="h1">BLOG POSTS</Text>
-    <Text as="h2" class="text-foreground-2 text-sm">Explore various sofware-related posts.</Text>
-  </section>
-  <Separator class="mt-4 mb-8 lg:mb-12" />
-  <div class="grid gap-10 lg:grid-cols-[1fr_30%] xl:gap-20">
-    <section class="flex flex-col gap-6">
-      <div class="flex items-center gap-4">
-        <Text as="h3" class="text-foreground-2">ALL POSTS</Text>
-        <Separator class="flex-1" />
-        <div class="text-foreground-2 flex items-center text-xs">
-          <Text>{views} Views</Text>
-          <Icon name="dot" />
-          <Text>{posts.length} Posts</Text>
-        </div>
-      </div>
-      <div x-data="partial('/blog/results')" class="flex flex-col gap-6">
-        <form
-          method="post"
-          class="border-border flex flex-col gap-4 rounded border p-4 text-xs shadow-sm"
-          @submit.prevent="!loading && (submission.get('query')?.trim() ?? '') !== $el.query.value?.trim() && submit()"
-        >
-          <div class="flex gap-2">
-            <Textfield name="query" placeholder="Search Posts" aria-label="Search Posts" class="flex-1">
-              <Icon slot="prefix" name="search" class="size-3.5" />
-              <Command slot="suffix" key="/" @keyup.window.slash="$el.parentElement.previousElementSibling.focus()" />
-            </Textfield>
-            <Button type="submit" size="icon" aria-label="Search" icon="search" :disabled="loading" />
-          </div>
-          <fieldset class="flex flex-wrap gap-2">
-            {topics.map((value) => <Chip name="topics" x-on:click="submit" {value} />)}
-          </fieldset>
-        </form>
-        <PostResults />
-      </div>
-    </section>
-    <section class="hidden flex-col gap-6 lg:flex">
-      <Text as="h3" class="text-foreground-2">RECENT POSTS</Text>
-      <!-- prettier-ignore -->
-      <ul class="flex flex-col gap-6">{posts.slice(0, 3).map((post) => <li><PostCard {post} /></li>)}</ul>
-    </section>
-  </div>
-</Layout>
+<Template />
