--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -11,7 +11,10 @@ export const buttonVariants = tv({
   ],
   defaultVariants: { color: 'neutral', size: 'sm' },
   variants: {
-    color: { neutral: 'bg-surface-3 enabled:hover:text-brand', ghost: 'enabled:hover:text-brand hover:bg-surface-3' },
+    color: {
+      neutral: 'bg-surface-3 enabled:hover:text-brand enabled:hover:bg-surface-3/90',
+      ghost: 'enabled:hover:text-brand enabled:hover:bg-surface-3',
+    },
     size: { sm: 'h-8 px-3 text-xs', icon: 'size-8 [&_svg]:size-4' },
   },
 });
