--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -3,9 +3,9 @@ import type { HTMLAttributes } from 'astro/types';
 import { twMerge } from 'tailwind-merge';
 import Icon from './icon.astro';
 
-type Props = HTMLAttributes<'a'> & { icon?: string };
+type Props = HTMLAttributes<'a'> & { icon?: string; iconInternal?: boolean };
 
-const { class: className, href, target, rel, icon, ...props } = Astro.props;
+const { class: className, href, target, rel, icon, iconInternal, ...props } = Astro.props;
 const external = href?.toString().startsWith('https://');
 ---
 
@@ -20,6 +20,6 @@ const external = href?.toString().startsWith('https://');
     className,
   )}
 >
-  {icon ? <Icon name={icon} /> : <slot />}
+  {icon ? <Icon name={icon} internal={iconInternal ?? false} /> : <slot />}
   {external && !icon && <Icon name="arrow-up-right" data-external-icon class="text-foreground-2 size-3" />}
 </a>
