--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -51,6 +51,7 @@ const {
     <link rel="icon" type="image/svg+xml" href={favicon.src} />
     <link rel="sitemap" href="/sitemap-index.xml" />
     <link href={String(new URL(Astro.url.pathname, Astro.site)).replace(/\/+$/, '')} rel="canonical" />
+    <script is:inline set:text="window.pagefind = await import('/pagefind/pagefind.js')" type="module" />
     <script is:inline set:text="document.documentElement.classList.add('[&_[x-cloak]]:hidden')" />
     <ViewTransitions />
   </head>
