💄 Some dialog styling

--- a/src/components/ui/dialog/components/body.astro
+++ b/src/components/ui/dialog/components/body.astro
@@ -9,7 +9,10 @@ const { class: className, ...props } = Astro.props;
 
 <div
   {...props}
-  class={twMerge('scrollbar max-h-[calc(95dvh-9rem)] overflow-y-auto p-6 lg:max-h-[calc(70dvh-9rem)]', className)}
+  class={twMerge(
+    'scrollbar max-h-[calc(95dvh-9rem)] overflow-y-auto px-6 py-10 lg:max-h-[calc(70dvh-9rem)]',
+    className,
+  )}
 >
   <slot />
 </div>
