🏗️ Migrate from Astro Studio -> turso

--- a/src/components/post-views.astro
+++ b/src/components/post-views.astro
@@ -10,7 +10,7 @@ type Props = { id: CollectionEntry<'posts'>['id'] };
 const views = await db
   .update(PostView)
   .set({ views: sql`${PostView.views} + 1` })
-  .where(eq(PostView.post, Astro.props.id))
+  .where(eq(PostView.slug, Astro.props.id))
   .returning({ views: PostView.views })
   .get()
   .then((res) => res.views.toString().padStart(6, '0'))
