--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -12,8 +12,8 @@ export const buttonVariants = tv({
   defaultVariants: { color: 'neutral', size: 'sm' },
   variants: {
     color: {
-      neutral: 'bg-surface-3 enabled:hover:text-brand enabled:hover:bg-surface-3/90',
-      ghost: 'enabled:hover:text-brand enabled:hover:bg-surface-3',
+      neutral: 'bg-surface-3 hover:text-brand hover:bg-surface-3/90',
+      ghost: 'hover:text-brand hover:bg-surface-3',
     },
     size: { sm: 'h-8 px-3 text-xs', icon: 'size-8 [&_svg]:size-4' },
   },
